# RMN_Agent

./: .env.example  .gitignore  CHANGELOG.md  Makefile  README.md  app.py  citation_validator.py  fusion_prompts.py  fusion_scope.py  ingest.py  list_chroma_catalog.py  paper_anchor.py  pyproject.toml  query_analyzer.py  rag_core.py  requirements.txt  rerankers.py  sample_chroma_snippets.py
chunking/: __init__.py  parent_child.py  report.py  section_parser.py  strategies.py
docs/: CHANGELOG.md  architecture.md  demo_script.md  presales_positioning.md
docs/experiments/: chunking_experiment.md  embedding_benchmark.md  google_embedding_failure_analysis.md  rag_evaluation.md  rerank_benchmark.md
eval/: audit_corpus.py  check_gold_evidence_alignment.py  compare_runs.py  eval_utils.py  experiment_utils.py  gold_evidence.jsonl  golden_questions.jsonl  metrics.py  parse_audit.py  rag_eval.py  run_all_eval.py  run_chunking_benchmark.py  run_embedding_benchmark.py  run_expanded_eval_summary.py  run_experiment.py  run_generation_eval.py  run_google_embedding_failure_analysis.py  run_query_anchor_ablation.py  run_ragas_eval.py  run_ranking_optimization_report.py  run_rerank_benchmark.py  run_retrieval_eval.py  write_expanded_golden_set.py
tests/: test_chunking_strategies.py  test_citation_validator.py  test_embedding_config.py  test_eval_metrics.py  test_fusion_scope.py  test_gold_evidence_alignment.py  test_ingest_prefix.py  test_ingest_scan_and_records.py  test_paper_anchor.py  test_query_analyzer_fallback.py  test_rerankers.py  test_retrieval_eval_schema.py
(+98 files in other folders)
