[project]
name = "rmn-lab-fusion-rag"
version = "0.1.0"
description = "Dual-path laboratory RAG over papers and SOPs with evidence-bound generation."
requires-python = ">=3.10,<3.13"
dependencies = [
  "langchain>=0.3.0",
  "langchain-core>=0.3.0",
  "langchain-openai>=0.2.0",
  "langchain-google-genai>=2.0.0",
  "langchain-community>=0.3.0",
  "langchain-chroma>=0.1.0",
  "langchain-text-splitters>=0.3.0",
  "pydantic>=2.0.0",
  "chromadb>=0.5.0",
  "pdfplumber>=0.11.0",
  "python-docx>=1.1.0",
  "python-dotenv>=1.0.0",
  "sentence-transformers>=3.0.0",
  "streamlit>=1.28.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]
llamaparse = [
  "llama-parse>=0.5.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-q"
